Projects and About me Both incompleted sha

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -89,3 +89,15 @@ img.tech{
 width: 80%;
 margin: auto;
 }
+
+.text{
+  &{
+    font-size: .9em;
+  }
+  &-sm{
+    font-size: .8rem;
+  }
+}
+a{
+  text-decoration: none !important;
+}
