--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,6 +17,7 @@ body {
 .section {
   & {
     min-height: 100vh;
+    padding: 10% 0px;
   }
 
   & {
@@ -53,6 +54,11 @@ span.grad {
 .navbar {
   .nav-link {
     padding: 0px 17px !important;
+    @media (max-width:900px) {
+      text-align: center;
+      width: 100%;
+      padding-bottom: 20px !important;
+    }
   }
 
   & {
