--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,8 +10,30 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*::-webkit-scrollbar {
+  width: 13px !important;
+  background-color: #fafafa;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: #444;
+    border-radius: 8px;
+  }
+}
+
 body {
   margin: 0;
+  overflow-x: hidden !important;
+  overflow-y: overlay;
+
+  * {
+    max-width: 100vw;
+  }
+
 }
 
 .section {
@@ -52,8 +74,13 @@ span.grad {
 }
 
 .navbar {
+  & {
+    max-width: 100vw !important;
+  }
+
   .nav-link {
     padding: 0px 17px !important;
+
     @media (max-width:900px) {
       text-align: center;
       width: 100%;
@@ -71,14 +98,14 @@ span.grad {
   }
 }
 
-img.tech{
+img.tech {
   width: 50px !important;
   height: 50px !important;
 }
 
 .tech-stack {
   .tech {
-    
+
     &+div {
       opacity: 0;
       transition-duration: 0.5s;
@@ -92,18 +119,21 @@ img.tech{
     }
 
   }
-width: 80%;
-margin: auto;
+
+  width: 80%;
+  margin: auto;
 }
 
-.text{
-  &{
+.text {
+  & {
     font-size: .9em;
   }
-  &-sm{
+
+  &-sm {
     font-size: .8rem;
   }
 }
-a{
+
+a {
   text-decoration: none !important;
 }
